2002-10-25  Wolfgang Sourdeau  <wolfgang@contre.com>
 
 	* src/gn_print.c (print_page): gnome_print_setfont should be
	called after ..._beginpage to avoid potential errors.	

2001-11-20  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/prefs.c: Needs to include "i18n.h" to avoid non-resolution
	of the '_' symbol...

2001-11-09  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/prefs.c (create_pref_notebook): new notebook to display the
	program's parameters.
	(tab_switch_cb): what happens whenever a preference button is clicked.
	(create_pref_content): set layout background to a light gray for
	aesthetical pleasure.

2001-11-08  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/prefs.c: New file to manage user's preferences.

2001-10-29  Wolfgang Sourdeau  <wolfgang@iscream.ca>

	* src/ps_print.c (create_temp_print_file): create file with umask=077.
	(create_temp_print_file): free template pattern from memory.

2001-10-12  Wolfgang Sourdeau  <wolfgang@contre.com>

	* configure.in: fixed problem with the gnome version detection
	script.

2001-10-05  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/errors.c: Adapted to the new GhfwDlgWindow widget.

	* src/ps_print.c: Adapted to the new GhfwDlgWindow and
	GhfwProgressWindow widgets.

	* src/gn_print.c: Adapted to the new GhfwDlgWindow and
	GhfwProgressWindow widgets.

2001-07-26  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/dialog_window.c: new file containing all the dialog_window_*
	functions from gtkutils.c (for further move in the libghfaxwidgets
	library)

2001-07-25  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/urlzone.c: new utility, add URL links to pixmap widgets.

2001-05-28  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/thumblayout.c (usr_btn_state_changed_cb): insensitive
	buttons don't prevent the layout to be scrolled with the mouse
	wheel anymore. The trick is to deactivate the button_press event
	catching when the widget is insensitive and do the reverse when it
	is sensitive.
